[gd_scene load_steps=22 format=2]

[ext_resource path="res://Sprites/Enemy/PngsFiles/fire_effect.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Enemy/PngsFiles/mega-skele-arms.png" type="Texture" id=2]
[ext_resource path="res://EnemeyContainer/Skele_type/left_hand.gd" type="Script" id=3]
[ext_resource path="res://Sprites/Enemy/PngsFiles/target.png" type="Texture" id=4]

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Right_Arm_axis/Right_Arm:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "damaged"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Right_Arm_axis/Right_Arm:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.803922, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Right_Arm_axis/Right_Arm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.51599, -2.29941 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Right_Arm_axis:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -123.4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Right_Arm_axis/Shadow:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Right_Arm_axis/Shadow:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Right_Arm_axis/Right_Arm/right_arm_area:monitoring")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Right_Arm_axis/Right_Arm/right_arm_area/CollisionShape2D2:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Right_Arm_axis/Right_Arm:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 12 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Right_Arm_axis/flick_hurtbox/CollisionShape2D:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Right_Arm_axis/Right_Arm:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("body:disabled")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Right_Arm_axis/Right_Arm/fist_area/CollisionShape2D:disabled")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Right_Arm_axis/Right_Arm/damage_zone/CollisionShape2D:disabled")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Right_Arm_axis/player_detect/CollisionShape2D:disabled")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Right_Arm_axis/Right_Arm/damage_zone/CollisionShape2D2:disabled")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=21]
resource_name = "dead"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Right_Arm_axis/player_detect/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Right_Arm_axis/flick_hurtbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Right_Arm_axis/Right_Arm/right_arm_area/CollisionShape2D2:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Right_Arm_axis/Right_Arm/damage_zone/CollisionShape2D2:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Right_Arm_axis/Right_Arm/damage_zone/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Right_Arm_axis/Right_Arm/fist_area/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Right_Arm_axis/Right_Arm:frame")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20 ]
}

[sub_resource type="Animation" id=13]
resource_name = "fist"
tracks/0/type = "value"
tracks/0/path = NodePath("Right_Arm_axis/Right_Arm:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Right_Arm_axis/Right_Arm:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Right_Arm_axis/Right_Arm:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.478431, 0.964706, 0.862745, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "flick"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Right_Arm_axis/Right_Arm:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Right_Arm_axis/flick_hurtbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "hand_rise"
tracks/0/type = "value"
tracks/0/path = NodePath("Right_Arm_axis/Right_Arm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.51599, -2.29941 ), Vector2( 1.516, -208 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Right_Arm_axis:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Right_Arm_axis/Right_Arm:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Right_Arm_axis/Shadow:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Right_Arm_axis/Right_Arm:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.411765, 0.984314, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("body:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Right_Arm_axis/Right_Arm/damage_zone/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "hand_slam"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Right_Arm_axis/Right_Arm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.516, -208 ), Vector2( 1.51599, -2.29941 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Right_Arm_axis/Shadow:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Right_Arm_axis/Right_Arm/right_arm_area/CollisionShape2D2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Right_Arm_axis/Right_Arm:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.8, 0.9, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Right_Arm_axis/Right_Arm:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1.2 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "hand_slam_final"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Right_Arm_axis/Shadow:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Right_Arm_axis/Shadow:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Right_Arm_axis/Right_Arm/right_arm_area/CollisionShape2D2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Right_Arm_axis/Right_Arm:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=9]
resource_name = "walk"
length = 0.75
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Right_Arm_axis/Right_Arm:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5, 6, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Right_Arm_axis:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -89.9999 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Right_Arm_axis/Right_Arm:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 93.0001, 23.9998 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Right_Arm_axis/Right_Arm:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 69.9998, 86.6089 )

[sub_resource type="CircleShape2D" id=5]
radius = 61.8547

[sub_resource type="CircleShape2D" id=10]
radius = 62.0081

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 69.357, 85.0998 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 82.6789, 93.335 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 74.8336, 83.3258 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 124.198, 116.604 )

[node name="KinematicBody2D" type="KinematicBody2D" groups=["boss_group"]]
script = ExtResource( 3 )

[node name="ani_hurt" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 14 )
anims/damaged = SubResource( 15 )

[node name="ani_right_hand" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/dead = SubResource( 21 )
anims/fist = SubResource( 13 )
anims/flick = SubResource( 8 )
anims/hand_rise = SubResource( 2 )
anims/hand_slam = SubResource( 3 )
anims/hand_slam_final = SubResource( 7 )
anims/walk = SubResource( 9 )

[node name="body" type="CollisionShape2D" parent="." groups=["boss_group"]]
visible = false
position = Vector2( 12.0012, -21.4078 )
shape = SubResource( 16 )

[node name="t2" type="Sprite" parent="."]
visible = false
position = Vector2( 495, -96 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="t1" type="Sprite" parent="."]
visible = false
position = Vector2( 426, -97 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="Right_Arm_axis" type="Position2D" parent="."]
rotation = -2.15374

[node name="player_detect" type="Area2D" parent="Right_Arm_axis"]
position = Vector2( -0.909938, 1.37997 )
rotation = 2.15374

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right_Arm_axis/player_detect"]
position = Vector2( -26.0093, 44.8081 )
shape = SubResource( 5 )

[node name="flick_hurtbox" type="Area2D" parent="Right_Arm_axis" groups=["enemey_group"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right_Arm_axis/flick_hurtbox" groups=["enemey_group"]]
modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 1, 0, 0, 1 )
position = Vector2( -24.0001, -44.9999 )
shape = SubResource( 10 )
disabled = true

[node name="Shadow" type="Sprite" parent="Right_Arm_axis"]
modulate = Color( 0, 0, 0, 0 )
position = Vector2( -76.6708, -20.0193 )
rotation = -2.1541
scale = Vector2( 1.0361, 1.08491 )
texture = ExtResource( 1 )

[node name="Right_Arm" type="Sprite" parent="Right_Arm_axis"]
position = Vector2( 1.51599, -2.29941 )
scale = Vector2( 0.441666, 0.441666 )
texture = ExtResource( 2 )
flip_h = true
hframes = 4
vframes = 6
frame = 12

[node name="pinky" type="Position2D" parent="Right_Arm_axis/Right_Arm"]
position = Vector2( -215.888, 84.3903 )
rotation = 2.82743

[node name="Sprite" type="Sprite" parent="Right_Arm_axis/Right_Arm/pinky"]
visible = false
scale = Vector2( 0.512613, 0.512613 )
texture = ExtResource( 1 )

[node name="middle" type="Position2D" parent="Right_Arm_axis/Right_Arm"]
position = Vector2( -241.733, -32.743 )
rotation = 3.14159

[node name="Sprite" type="Sprite" parent="Right_Arm_axis/Right_Arm/middle"]
visible = false
scale = Vector2( 0.512613, 0.512613 )
texture = ExtResource( 1 )

[node name="index" type="Position2D" parent="Right_Arm_axis/Right_Arm"]
position = Vector2( -226.088, -153.891 )
rotation = 3.45575

[node name="Sprite" type="Sprite" parent="Right_Arm_axis/Right_Arm/index"]
visible = false
scale = Vector2( 0.512613, 0.512613 )
texture = ExtResource( 1 )

[node name="thumb" type="Position2D" parent="Right_Arm_axis/Right_Arm"]
position = Vector2( -39.0214, -167.983 )
rotation = 3.63552

[node name="Sprite" type="Sprite" parent="Right_Arm_axis/Right_Arm/thumb"]
visible = false
scale = Vector2( 0.512613, 0.512613 )
texture = ExtResource( 1 )

[node name="right_arm_area" type="Area2D" parent="Right_Arm_axis/Right_Arm" groups=["enemey_group"]]
visible = false
position = Vector2( 1003.64, -1072.54 )
rotation = 2.1541
scale = Vector2( 2.26415, 2.26415 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Right_Arm_axis/Right_Arm/right_arm_area" groups=["enemey_group"]]
position = Vector2( 665.966, 182.328 )
rotation = -0.588176
shape = SubResource( 6 )
disabled = true

[node name="damage_zone" type="Area2D" parent="Right_Arm_axis/Right_Arm" groups=["damage_zone"]]
visible = false
position = Vector2( -210.567, -54.3392 )
rotation = 1.57079
scale = Vector2( 2.26415, 2.26415 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Right_Arm_axis/Right_Arm/damage_zone"]
position = Vector2( 0.81436, -15.5102 )
shape = SubResource( 20 )
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right_Arm_axis/Right_Arm/damage_zone"]
position = Vector2( 1.076, -17.5241 )
shape = SubResource( 18 )

[node name="fist_area" type="Area2D" parent="Right_Arm_axis/Right_Arm"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right_Arm_axis/Right_Arm/fist_area"]
position = Vector2( -97.3587, -28.3018 )
shape = SubResource( 19 )
disabled = true

[connection signal="area_entered" from="Right_Arm_axis/player_detect" to="." method="_on_player_detect_area_entered"]
[connection signal="area_exited" from="Right_Arm_axis/player_detect" to="." method="_on_player_detect_area_exited"]
[connection signal="body_entered" from="Right_Arm_axis/flick_hurtbox" to="." method="_on_flick_hurtbox_body_entered"]
[connection signal="area_entered" from="Right_Arm_axis/Right_Arm/damage_zone" to="." method="_on_damage_zone_area_entered"]
[connection signal="area_exited" from="Right_Arm_axis/Right_Arm/damage_zone" to="." method="_on_damage_zone_area_exited"]
[connection signal="area_entered" from="Right_Arm_axis/Right_Arm/fist_area" to="." method="_on_fist_area_area_entered"]
